--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "encodify",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "convert to popular human code formats",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,8 @@
     "roman",
     "nato",
     "language",
-    "anagram"
+    "anagram",
+    "spinalCase"
   ],
   "author": "Nitin Pradeep Kumar <getnpk@gmail.com> (https://github.com/npkumar)",
   "license": "MIT",
