--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "encodify",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "convert to popular human code formats",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,8 @@
     "nato",
     "language",
     "anagram",
-    "spinalCase"
+    "spinalCase",
+    "fibonacci"
   ],
   "author": "Nitin Pradeep Kumar <getnpk@gmail.com> (https://github.com/npkumar)",
   "license": "MIT",
